--- a/css/styles.css
+++ b/css/styles.css
@@ -176,9 +176,11 @@ address {
 /* Section Welcome */
 
 .welcome-section {
+  max-width: 1440px;
   background-color: #2e2f42;
   padding-top: 188px;
   padding-bottom: 188px;
+  margin: 0 auto;
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
@@ -215,6 +217,7 @@ address {
   border-radius: 4px;
   border: none;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button:hover,
@@ -238,11 +241,13 @@ address {
 }
 
 .f-icon-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 112px;
   background-color: #f4f4fd;
   border: 1px solid #8e8f99;
   border-radius: 4px;
-  padding-top: 24px;
-  padding-bottom: 24px;
   margin-bottom: 8px;
 }
 
@@ -282,7 +287,7 @@ address {
 }
 
 .team-item-label {
-  padding: 32px 16px;
+  padding: 32px 0;
   text-align: center;
 }
 
@@ -296,25 +301,34 @@ address {
 
 .team-soc {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 24px;
 }
 
 .soc-item {
   width: 40px;
   height: 40px;
+}
+
+.soc-link {
+  width: 100%;
+  height: 100%;
   border-radius: 50%;
   background-color: #4d5ae5;
-  padding: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.soc-item:hover {
+.soc-link:hover,
+.soc-link:focus {
   background-color: #404bbf;
 }
 
 .soc-icon {
   display: block;
-  fill: #fff;
+  fill: #f4f4fd;
 }
 
 /* Section Portfolio */
