--- a/css/styles.css
+++ b/css/styles.css
@@ -363,9 +363,7 @@ address {
   position: absolute;
   top: 0;
   left: 0;
-  padding-top: 40px;
-  padding-left: 32px;
-  padding-right: 32px;
+  padding: 40px 32px;
   background-color: #4d5ae5;
   height: 100%;
   color: #f4f4fd;
@@ -406,9 +404,12 @@ address {
 
 .container-footer {
   display: flex;
-  gap: 120px;
+  align-items: baseline;
 }
 
+.footer-right-part {
+  margin-right: 120px;
+}
 .footer-logo {
   display: inline-block;
   margin-bottom: 16px;
@@ -429,14 +430,14 @@ address {
   margin-bottom: 16px;
 }
 
-.footer-soc .soc-item {
+.footer-soc .soc-link {
   padding: 8px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-soc .soc-item:hover,
-.footer-soc .soc-item:hover .soc-icon {
+.footer-soc .soc-link:hover,
+.footer-soc .soc-link:hover .soc-icon {
   background-color: #31d0aa;
   fill: #f4f4fd;
 }
