--- a/css/styles.css
+++ b/css/styles.css
@@ -422,6 +422,7 @@ address {
   display: flex;
   justify-content: left;
   gap: 16px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-soc-title {
@@ -430,14 +431,31 @@ address {
   margin-bottom: 16px;
 }
 
-.footer-soc .soc-link {
-  padding: 8px;
+.f-soc-item {
+  width: 40px;
+  height: 40px;
+}
+.f-soc-link {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.f-soc-icon {
+  display: block;
+  fill: #fff;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-soc .soc-link:hover,
-.footer-soc .soc-link:hover .soc-icon {
+.f-soc-link:hover,
+.f-soc-link:hover .f-soc-icon,
+.f-soc-link:active,
+.f-soc-link:active .f-soc-icon {
   background-color: #31d0aa;
   fill: #f4f4fd;
 }
