--- a/css/styles.css
+++ b/css/styles.css
@@ -380,9 +380,6 @@ address {
   transform: translateY(0);
 }
 
-.portfolio-item:hover .portfolio-image-cover {
-}
-
 .portfolio-item-label {
   border-bottom: 1px solid #e7e9fc;
   border-left: 1px solid #e7e9fc;
@@ -454,8 +451,8 @@ address {
 
 .f-soc-link:hover,
 .f-soc-link:hover .f-soc-icon,
-.f-soc-link:active,
-.f-soc-link:active .f-soc-icon {
+.f-soc-link:focus,
+.f-soc-link:focus .f-soc-icon {
   background-color: #31d0aa;
   fill: #f4f4fd;
 }
