--- a/css/styles.css
+++ b/css/styles.css
@@ -450,9 +450,11 @@ address {
 }
 
 .f-soc-link:hover,
-.f-soc-link:hover .f-soc-icon,
-.f-soc-link:focus,
-.f-soc-link:focus .f-soc-icon {
+.f-soc-link:focus {
   background-color: #31d0aa;
+}
+
+.f-soc-link:hover .f-soc-icon,
+.f-soc-link:focus .f-soc-icon {
   fill: #f4f4fd;
 }
